force-app/main/default/objects/HealthCloudGA__HcFlexibleCarePlanTabs__c/fields/HealthCloudGA__Namespace__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Namespace__c</fullName>
    <label>Namespace</label>
    <length>100</length>
    <type>Text</type>
</CustomField>